[package]
name = "simple-http-cached"
version = "0.1.0"
edition = "2021"

[dependencies]
hyper = { version = "1", features = ["full"] }
tokio = { version = "1", features = ["full"] }
http-body-util = "0.1"
hyper-util = { version = "0.1", features = ["full"] }
bytes = "1.9.0"
hyper-rustls = "0.27.5"
tokio-util = { version="0.7.13", features = ["io", "futures-util"] }
feature_utils = "0.0.0"
futures-util = "0.3.31"
